fix grid alignment

--- a/qk-front/components/Institution/InstitutionDashboardItem/InstitutionDashboardItem.module.scss
+++ b/qk-front/components/Institution/InstitutionDashboardItem/InstitutionDashboardItem.module.scss
@@ -3,9 +3,9 @@
 
 .wrapper {
   display: grid;
-  grid-template-columns: 1fr 1.5fr .7fr 1fr .5fr;
+  grid-template-columns: 1.1fr 1.5fr .7fr .7fr .5fr;
   align-items: center;
-  justify-items: center;
+  justify-items: stretch;
   //display: flex;
   //align-items: center;
   //justify-content: space-between;
@@ -16,6 +16,9 @@
   padding: 0 2.5rem;
   width: calc(100% - 2.5rem - 2.5rem);
   height: 9rem;
+  > p:nth-child(4) {
+    justify-self: center;
+  }
 }
 
 .itemWrapper {
